<resources>
    <string name="app_name">RatsCatsElephants</string>
    <string name="app_title">Rats-Cats-Elephants</string>
    <string name="result">No Result</string>
    <string name="about_title">About</string>
     <string name="about_text">
        <b>Step 1</b> You pick a choice from images \n
        <b>Step 2</b> Computer generate a choice \n
        <b>Step 3</b> Result shows who won the game \n
        <b>Goal</b> TRY to have 100 Pct. Lucky G \n
        <b>Hint</b> (Shake U Phone Reset Default Scr) \n
        <i>This is a game for you to refresh your mind and take time to think about nothing</i></string>
    <string name="computer_textview_label">COM PK</string>
    <string name="human_textview_label">YOU PK</string>
    <string name="count">COUNT</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Rats-Cats-Elephants Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="Exit">exit</string>
</resources>
