<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.huang.ratscatselephants.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:id="@+id/about_button"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/rat_imagebutton"
        android:layout_alignEnd="@+id/cat_imagebutton" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/cat_imagebutton"
        android:src="@drawable/cat"
        android:layout_above="@+id/result"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/rat_imagebutton"
        android:src="@drawable/rat"
        android:layout_alignTop="@+id/cat_imagebutton"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/elephant_imagebutton"
        android:src="@drawable/elephant"
        tools:ignore="ContentDescription"
        android:layout_above="@+id/result"
        android:layout_alignStart="@+id/human_textView" />

    <ImageView
        android:layout_width = "100dp"
        android:layout_height= "100dp"
        android:id="@+id/computer_imageview"
        android:src="@drawable/nopic"
        tools:ignore="ContentDescription"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/human_imageview"
        android:src="@drawable/nopic"
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/vs_imageview"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/vs_imageview"
        android:src="@drawable/vs"
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/computer_imageview"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computer_textview_label"
        android:textSize="15sp"
        android:id="@+id/computer_textview"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/computer_imageview"
        android:layout_alignEnd="@+id/computer_imageview" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/human_textview_label"
        android:id="@+id/human_textView"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_alignTop="@+id/computer_textview"
        android:layout_alignStart="@+id/human_imageview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/count"
        android:id="@+id/count"
        android:textColor="@color/colorAccent"
        android:layout_above="@+id/rat_imagebutton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/result"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status_seekBar"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/human_imageview" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        android:id="@+id/exit_button"
        android:layout_alignTop="@+id/about_button"
        android:layout_alignEnd="@+id/result"
        android:layout_alignStart="@+id/elephant_imagebutton" />

</RelativeLayout>
